--- a/login.css
+++ b/login.css
@@ -7,6 +7,11 @@ body {
   height: 100vh;
   margin: 0;
 }
+h1 {
+  justify-content: left;
+  margin-right: 200px;
+  font-size: 100px;
+}
 
 .container {
   background-color: #fff;
