--- a/register.css
+++ b/register.css
@@ -16,8 +16,13 @@ body {
   max-width: 500px;
   width: 100%;
 }
-
 h1 {
+    justify-content: left;
+    margin-right: 200px;
+    font-size: 100px;
+  }
+
+h2 {
   text-align: center;
   margin-bottom: 30px;
 }
@@ -47,4 +52,14 @@ button {
 
 button:hover {
   background-color: #45a049;
+}
+.additional-links {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.additional-links a {
+  color: #4caf50;
+  text-decoration: none;
+  margin: 0 10px;
 }
