--- a/register.css
+++ b/register.css
@@ -7,28 +7,30 @@ body {
     height: 100vh;
     margin: 0;
   }
-  h1 {
-    justify-content: left;
-    margin-right: 200px;
-    font-size: 100px;
-  }
   
   .container {
     background-color: #fff;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 500px;
     width: 100%;
   }
+  h1 {
+      justify-content: left;
+      margin-right: 200px;
+      font-size: 100px;
+    }
   
   h2 {
     text-align: center;
     margin-bottom: 30px;
   }
   
+  input[type="text"],
   input[type="email"],
-  input[type="password"] {
+  input[type="password"],
+  select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -51,7 +53,6 @@ body {
   button:hover {
     background-color: #45a049;
   }
-  
   .additional-links {
     text-align: center;
     margin-top: 20px;
